--- a/Index.html
+++ b/Index.html
@@ -8,7 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Reggae+One&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Crimson+Text:ital,wght@1,700&family=Reggae+One&display=swap" rel="stylesheet">
 </head>
-<link rel="stylesheet" href="style.css">
+<link rel="stylesheet" href="Style.css">
 <body>
     <ul class="Menu">
         <li class="Links"><a href="#Welcome">Home</a></li>
